<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movement_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_mainbackground">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="Control mobile robot movements"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_title"
        android:gravity="center"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/btn_forward"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/btn_forward"
            android:rotation="-90"
            android:src="@drawable/arrowforward"
            android:textColor="@color/btn_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/btn_left"
                android:rotation="180"
                android:src="@drawable/arrowforward"
                android:textAlignment="viewEnd"
                android:textColor="@color/btn_text_color" />

            <ImageButton
                android:id="@+id/btn_right"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/btn_right"
                android:src="@drawable/arrowforward"
                android:textColor="@color/btn_text_color" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_backwards"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/btn_backwards"
            android:rotation="90"
            android:src="@drawable/arrowforward"
            android:textColor="@color/btn_text_color" />

    </LinearLayout>
</RelativeLayout>