<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinator_layout"
        android:text="@string/btn_discover" />

    <Button
        android:id="@+id/btn_direct_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_discover"
        android:layout_below="@id/coordinator_layout"
        android:text="@string/btn_direct_connect" />

    <Button
        android:id="@+id/btnONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_direct_connect"
        android:layout_below="@id/coordinator_layout"
        android:text="ON/OFF" />

    <Button
        android:id="@+id/btn_startConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_discover"
        android:text="Start connection" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_device_address"
        android:hint="@string/et_ex_address"
        android:minWidth="100dp" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/btn_startConnection"/>

    <TextView
        android:id="@+id/tv_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_startConnection"
        android:text="@string/tv_give_device"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/et_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvNewDevices" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_send"
        android:text="Send" />

</RelativeLayout>